all players endpoint and all teams endpoint done
